# Xscript

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: linux-amd64.yml
Backend/: ClassDescriptor.cpp  ClassDescriptor.hpp  CompilerEnvironment.cpp  CompilerEnvironment.hpp  CompilingTimeClass.cpp  CompilingTimeClass.hpp  CompilingTimeFunction.cpp  CompilingTimeFunction.hpp  CompilingTimePackageStructure.cpp  CompilingTimePackageStructure.hpp  ConstantPool.cpp  ConstantPool.hpp  ExpressionCompiler.cpp  ExpressionCompiler.hpp  SymbolItem.cpp  SymbolItem.hpp  Typename.cpp  Typename.hpp
Backend/Compiler/: BaseCompiler.cpp  BaseCompiler.hpp  ExpressionCompiler.cpp  ExpressionCompiler.hpp  FileCompiler.cpp  FileCompiler.hpp  StatementCompiler.cpp  StatementCompiler.hpp
Binary/Compiler/: main.cpp
Binary/Executor/: main.cpp
Binary/XNativeLibraryInfo/: main.cpp
Core/: CompilerCore.cpp  CompilerCore.hpp
Core/Reader/: BaseTypeReader.cpp  BaseTypeReader.hpp  ExtendedTypeReader.cpp  ExtendedTypeReader.hpp
Core/Serializatior/: BaseTypeSerializatior.cpp  BaseTypeSerializatior.hpp  ExtendedTypeSerializatior.cpp  ExtendedTypeSerializatior.hpp
Documents/: CPA(Cross Package Access) with class extends.md  Overload-able operators in XScript 2.md  SourcesCodes.md  Syntax.md  The implementation of thread api.md  The implementation of try-catch statement.md  TheDesignOfClass.md  TheFunctionsAndFunctionPointer.md
Executor/: BytecodeInterpreter.cpp  BytecodeInterpreter.hpp  BytecodeInterpreterPool.cpp  BytecodeInterpreterPool.hpp  BytecodeStructure.cpp  BytecodeStructure.hpp  EnvArrayObject.cpp  EnvArrayObject.hpp  EnvBytesObject.cpp  EnvBytesObject.hpp  EnvClassObject.cpp  EnvClassObject.hpp  EnvClassTemplate.cpp  EnvClassTemplate.hpp  EnvClosureObject.cpp  EnvClosureObject.hpp  EnvConstantPool.cpp  EnvConstantPool.hpp  EnvFunction.cpp  EnvFunction.hpp  EnvObject.cpp  EnvObject.hpp  EnvPackageStructure.cpp  EnvPackageStructure.hpp  EnvStringObject.cpp  EnvStringObject.hpp  Environment.cpp  Environment.hpp  EnvironmentHeap.cpp  EnvironmentHeap.hpp  EnvironmentStack.cpp  EnvironmentStack.hpp  EnvironmentStackFramesInfomation.cpp  EnvironmentStackFramesInfomation.hpp  EnvironmentStackFramesInformation.cpp  EnvironmentStackItem.cpp  EnvironmentStackItem.hpp  EnvironmentThread.cpp  EnvironmentThread.hpp  EnvironmentThreadPool.cpp  (+9 more)
Frontend/: AST.cpp  AST.hpp  Lexer.cpp  Lexer.hpp
Frontend/Parsers/: AdditionExpressionNodeGenerator.cpp  AdditionExpressionNodeGenerator.hpp  AliasStatementNodeGenerator.cpp  AliasStatementNodeGenerator.h  AliasStatementNodeGenerator.hpp  ArgumentsNodeGenerator.cpp  ArgumentsNodeGenerator.hpp  AssignmentExpressionNodeGenerator.cpp  AssignmentExpressionNodeGenerator.hpp  BaseGenerator.cpp  BaseGenerator.hpp  BinaryExpressionNodeGenerator.cpp  BinaryExpressionNodeGenerator.hpp  BinaryMoveExpressionNodeGenerator.cpp  BinaryMoveExpressionNodeGenerator.hpp  BreakStatementNodeGenerator.cpp  BreakStatementNodeGenerator.hpp  ClassDefinitionNodeGenerator.cpp  ClassDefinitionNodeGenerator.hpp  ClosureDefinitionNodeGenerator.cpp  ClosureDefinitionNodeGenerator.hpp  CodeBlockNodeGenerator.cpp  CodeBlockNodeGenerator.hpp  ComparingExpressionNodeGenerator.cpp  ComparingExpressionNodeGenerator.hpp  ContinueStatementNodeGenerator.cpp  ContinueStatementNodeGenerator.hpp  CrossPackageAccessExpressionNodeGenerator.cpp  CrossPackageAccessExpressionNodeGenerator.hpp  DecrementExpressionNodeGenerator.cpp  DecrementExpressionNodeGenerator.hpp  EqualExpressionNodeGenerator.cpp  EqualExpressionNodeGenerator.hpp  ExpressionNodeGenerator.cpp  ExpressionNodeGenerator.hpp  FileNodeGenerator.cpp  FileNodeGenerator.hpp  FileStatementNodeGenerator.cpp  FileStatementNodeGenerator.hpp  ForStatementNodeGenerator.cpp  (+59 more)
NativeLibrary/: NativeLibrariesManager.cpp  NativeLibrariesManager.hpp  NativeLibrary.cpp  NativeLibrary.hpp
Samples/BasicExamples/: 01packet.xs  main.xs  package_test.xs  simple.xs  test_before_destruct.xs  test_closure.xs  test_hashmap.xs  test_libfs.xs  test_perf.xs  test_stringformatter.xs
Samples/HelloWorld/: main.xs  package.xconf
Share/: Config.cpp  Config.hpp  Git.cmake  Utils.cpp  Utils.hpp  XScriptException.cpp  XScriptException.hpp  Xqueue.cpp  Xqueue.hpp  dlfcn.h
Share/Exceptions/: BytecodeInterpretError.cpp  BytecodeInterpretError.hpp  CompilerError.cpp  CompilerError.hpp  HeapOverflowException.cpp  HeapOverflowException.hpp  InternalException.cpp  InternalException.hpp  ParserException.cpp  ParserException.hpp
Tests/: BasicTestFramework.cpp  BasicTestFramework.hpp  BasicTests.cpp  BasicTests.hpp
ThirdPartyLibraries/: localr.hpp
